# IWork-test

./: .dockerignore  .env.dev  .flake8  .gitignore  .test.env  404.html  CHANGELOG.md  CONTRIBUTORS.md  Dockerfile  Procfile  README.md  docker-compose.yml  docs.http  index.html  manage.py  mkdocs.yml  pyproject.toml  requirements.txt  sitemap.xml
command/: index.html
docs/: command.md  index.md  installation.md
docs/js/: mermaid.min.js
docs/reference/product/: models.md  utils.md
docs/reference/users/: views.md
installation/: index.html
iwrok_test/: asgi.py  settings.py  urls.py  views.py  wsgi.py
product/: admin.py  apps.py  models.py  serializers.py  urls.py  utils.py  views.py
product/migrations/: 0001_initial.py
product/tests/: test_views.py
reference/product/models/: index.html
reference/product/utils/: index.html
reference/users/adapter/: index.html
reference/users/context_processors/: index.html
reference/users/forms/: index.html
reference/users/models/: index.html
reference/users/validators/: index.html
reference/users/views/: index.html
search/: search_index.json
templates/: base.html  security.txt
users/: adapter.py  admin.py  models.py  serializers.py  urls.py  views.py
users/migrations/: 0001_initial.py
users/tests/: test_views.py
